--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
-body{
-    background-color: aqua;
+.dark {
+  background-color: black;
+  color: white;
+}
+.light {
+  background-color: white;
+  color: black;
 }
